# BlueDot-Project-Sprint

./: .gitignore  README.md  debate_stego_design.md
debate-stego/: .env.example  .gitignore  README.md  pyproject.toml
debate-stego/debate_stego/: __init__.py  cli.py  experiment.py  interface.py  llm.py
debate-stego/debate_stego/dataset/: quality.py
debate-stego/debate_stego/debaters/: colluding.py  common.py  honest.py
debate-stego/debate_stego/encodings/: acrostic.py  base.py  marker_word.py  sentence_count.py
debate-stego/debate_stego/judges/: naive.py  scheme_aware.py
debate-stego/debate_stego/paraphrasers/: context_aware.py  none.py  suspicious.py
debate-stego/docs/: v2-notes.md
debate-stego/results/: RESULTS.md  combined_results.csv  summary.csv
debate-stego/scripts/: inspect_failures.py  make_plots.py  run_all_conditions.py
debate-stego/tests/: test_encodings.py  test_llm_cache.py  test_paraphrasers.py  test_quality_loader.py
